refactor: simplify codes for baseline

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
     }
 }
 
-rootProject.name = "QnnSampleApp"
+rootProject.name = "QnnApplication"
 include ':app'
