--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,14 +14,13 @@ android {
         versionName "1.0"
 
         ndk {
-            abiFilters 'arm64-v8a','x86', 'x86_64'
+            abiFilters 'arm64-v8a'
         }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
                 arguments "-DCMAKE_BUILD_TYPE=Release"
-                // arguments "-DQNN_API=__attribute__((visibility(\"default\")))"
             }
         }
     }
