refactor: change app's name

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.qnnsampleapp'
+    namespace 'com.example.qnnmobileapp'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.qnnsampleapp"
+        applicationId "com.example.qnnmobileapp"
         minSdk 21
         targetSdk 34
         versionCode 1
